color contrast AAA guidelines

--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
 
     .hiragana {
       border-right: 1px solid;
-      color: #A06D7F;
+      color: #7a4a5b;
     }
 
     .katakana {
       border-right: 1px solid;
-      color: #75D1B3;
+      color: #00654c;
     }
     .hira{
-      color:#A06D7F;
+      color:#7a4a5b;
     }
 
     .kata{
-      color:#75D1B3;
+      color:#00654c;
     }
 
 
