--- a/index.html
+++ b/index.html
@@ -73,11 +73,13 @@
     .hiragana {
       border-right: 1px solid;
       color: #7a4a5b;
+      cursor: pointer;
     }
 
     .katakana {
       border-right: 1px solid;
       color: #00654c;
+      cursor: pointer;
     }
     .hira{
       color:#7a4a5b;
