--- a/index.html
+++ b/index.html
@@ -81,12 +81,13 @@
       color: #00654c;
       cursor: pointer;
     }
-    .hira{
-      color:#7a4a5b;
+
+    .hira {
+      color: #7a4a5b;
     }
 
-    .kata{
-      color:#00654c;
+    .kata {
+      color: #00654c;
     }
 
 
@@ -127,6 +128,33 @@
       align-self: center;
       font-size: 3em;
       margin-right: 10em;
+    }
+
+    footer {
+      background-color: #f8f9fa;
+      color: #212529;
+      text-align: center;
+      padding: 20px 0;
+      position: fixed;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      font-family: Arial, sans-serif;
+    }
+
+    footer p {
+      margin: 0;
+      padding: 0;
+    }
+
+    footer a {
+      color: #007bff;
+      text-decoration: none;
+    }
+
+    footer a:hover {
+      color: #0056b3;
+      text-decoration: underline;
     }
   </style>
 </head>
@@ -1027,6 +1055,11 @@
     <div class="title"><span class="hira">Hiragana</span> & <span class="kata">Katakana</span></div>
   </div>
 
+
+  <footer>
+    <p>Special thanks to <a href="https://github.com/seamlik/kana-chart" target="_blank">@seamlik</a> for their
+      contributions.</p>
+  </footer>
 
 
 
