--- a/index.html
+++ b/index.html
@@ -156,10 +156,27 @@
       color: #0056b3;
       text-decoration: underline;
     }
+
+    .instruction {
+      display: block;
+      margin-top: 0.2em;
+      margin-left: 0.2em;
+      text-align: center;
+      background-color: transparent;
+      border: 2px solid black;
+      margin-right: 5px;
+      font-family: Verdana, sans-serif;
+      color: black;
+      background-color: aliceblue;
+      padding: 0.5em;
+      font-size: 0.8em;
+    }
   </style>
 </head>
 
 <body>
+  
+  <div class="instruction">click on each syllable to display the sequence of strokes</div>
   <div class="container">
     <table class="chart-table">
       <tbody>
@@ -1054,6 +1071,7 @@
     </table>
     <div class="title"><span class="hira">Hiragana</span> & <span class="kata">Katakana</span></div>
   </div>
+
 
 
   <footer>
